#
# "$Id: configure.in,v 1.1 2006-02-07 02:02:02 zeeb90au Exp $"
#
# Configure script for sbgtk. SmallBASIC (GTK)
#
# Copyright(C) 2001-2006 Chris Warren-Smith. Gawler, South Australia
#
# This program is distributed under the terms of the GPL v2.0
# Download the GNU Public License (GPL) from www.gnu.org
#
#

AC_INIT(configure.in)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(sbgtk, 0.9.7)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Checks for programs.
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h locale.h malloc.h memory.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h termio.h termios.h unistd.h utime.h wchar.h wctype.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STAT
#AC_HEADER_STDBOOL
#AC_C_CONST
#AC_TYPE_UID_T
#AC_C_INLINE
#AC_TYPE_OFF_T
#AC_TYPE_PID_T
#AC_TYPE_SIZE_T
#AC_CHECK_MEMBERS([struct stat.st_blksize])
#AC_STRUCT_ST_BLOCKS
#AC_CHECK_MEMBERS([struct stat.st_rdev])
#AC_HEADER_TIME
#AC_STRUCT_TM
#AC_C_VOLATILE

# Checks for library functions.
#AC_FUNC_CHOWN
#AC_FUNC_CLOSEDIR_VOID
#AC_FUNC_ERROR_AT_LINE
#AC_FUNC_FORK
#AC_PROG_GCC_TRADITIONAL
#AC_FUNC_LSTAT
#AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
#AC_FUNC_MALLOC
#AC_FUNC_MBRTOWC
#AC_FUNC_MEMCMP
#AC_HEADER_MAJOR
#AC_FUNC_MKTIME
#AC_FUNC_MMAP
#AC_FUNC_REALLOC
#AC_FUNC_SELECT_ARGTYPES
#AC_FUNC_SETVBUF_REVERSED
#AC_TYPE_SIGNAL
#AC_FUNC_STAT
#AC_FUNC_STRCOLL
#AC_FUNC_STRFTIME
#AC_FUNC_STRTOD
#AC_FUNC_VPRINTF
#AC_CHECK_FUNCS([alarm atexit bzero dup2 endpwent floor ftruncate getcwd gethostbyname isascii mbrlen memmove memset mkdir modf munmap pow putenv rint rmdir select setenv setlocale socket sqrt strcasecmp strchr strdup strerror strncasecmp strndup strrchr strspn strstr strtol wcwidth])

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])

win32=no
case "${host_os}" in
  *mingw* | pw32* | cygwin*)
	win32="yes"
    AC_CHECK_TOOL(WINDRES, windres, :)
    PACKAGE_CFLAGS="$PACKAGE_CFLAGS -mms-bitfields -mno-cygwin"
esac
AM_CONDITIONAL(WITH_WIN32, test x"$win32" = "xyes")
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=sbgtk
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

# disable build for hildon
AC_ARG_ENABLE(hildon,
  AC_HELP_STRING([--disable-hildon], [disable hildon build (default=no)]),
  [ac_hildon_build="no"],
  [ac_hildon_build="yes"])

if test "x$ac_hildon_build" = "xyes"; then
   AC_DEFINE(USE_HILDON, 1, [Define if building for hildon/maemo/n770.])
fi

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
common/Makefile
src/Makefile
])

make clean > /dev/null 2>&1


