dnl 
dnl "$Id: configure.in 604 2008-05-21 11:47:15Z zeeb90au $"
dnl 
dnl Configure script for SmallBASIC
dnl
dnl Copyright(C) 2001-2008 Chris Warren-Smith. [http://tinyurl.com/ja2ss]
dnl
dnl This program is distributed under the terms of the GPL v2.0
dnl Download the GNU Public License (GPL) from www.gnu.org
dnl

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AM_INIT_AUTOMAKE(smallbasic, 0.10.1)

AC_CONFIG_SRCDIR([mysql/mysql.c])
AC_CONFIG_HEADER([config.h])

# Checks for header files.
AC_CHECK_HEADER(mysql/mysql.h, [], [AC_MSG_ERROR("install mysql")])

AC_DEFINE(_UnixOS, 1, [Building under Unix like systems.])
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

BUILD_SUBDIRS="mysql"
AC_SUBST(BUILD_SUBDIRS)

libdir=${libdir}/smallbasic

AC_CONFIG_FILES([
Makefile
mysql/Makefile])

AC_OUTPUT
