dnl
dnl Configure script for SmallBASIC
dnl
dnl Copyright(C) 2001-2016 Chris Warren-Smith.
dnl
dnl This program is distributed under the terms of the GPL v2.0
dnl Download the GNU Public License (GPL) from www.gnu.org
dnl

dnl sudo apt-get install libtool

AC_INIT([smallbasic], [0.12.7])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_MACRO_DIRS([m4])

AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_HEADERS([config.h])

LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT


